--- a/SD_Loaner/nbproject/project.properties
+++ b/SD_Loaner/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/SD_Loaner.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gson-2.8.5.jar=C:\\Users\\Telmo\\Desktop\\gson-2.8.5.jar
+file.reference.gson-2.8.5.jar=src/Utilities/gson-2.8.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
